[package]
name = "proto_benches"
version = "0.1.0"
authors = ["theseriousadult <jack@gallabytes.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-soft = "0.3.3"
blake3 = "0.2.2"
generic-array = "0.12"
block-cipher-trait = "0.6.2"
aesni = {version = "0.6.0", optional = true}
rand = "0.7.3"
rand_chacha = "0.2.2"

[dev-dependencies]
criterion = "0.3.1"

[[bench]]
name = "comparison"
harness = false
